--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ header {
 border-bottom: solid 2px rgb(#6C2C91);
 padding: 20px;
 font-size: 32px;
-color: rgb(3D1F77);
+color: rgb(#3D1F77);
 }
 
 section {
