--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,60 @@
 body {
-color: 61, 31, 119;
-background: 102, 0, 255;
-margin: 0px;
+    color: #3D1F77;
+    background: #6600FF;
+    margin: 0px;
+    font-family: "Chakra Petch", sans-serif;
+    margin-bottom: 100px;
 }
 
 header {
-border-bottom: solid 2px rgb(108, 44, 145);
-padding: 20px;
-font-size: 32px;
-color: rgb(61, 31, 119);
+    border-bottom: solid 2px rgb(42, 122, 228);
+    padding: 20px;
+    font-size: 32px;
+    color: #005F80;
 }
 
-section {
-background: rgb(102, 0, 255);
-padding-bottom: 80px;
-padding-top: 80px;
-display: flex;
-justify-content: center;
+.chamada {
+    background:#6600FF;
+    padding-bottom: 80px;
+    padding-top: 80px;
+    display: flex;
+    justify-content: center;
 }
 
 .chamada-texto {
-margin-right: 5%;
+    margin-right: 5%;
+}
+
+h1 {
+    font-size: 40px;
+}
+
+p {
+    font-size: 20px;
+}
+
+.categoria-videos {
+    display: flex;
+    overflow-x: auto;
+    gap: 10px;
+}
+
+.categoria {
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-top: 50px;
+}
+
+.categoria-videos img {
+    opacity: 0.5;
+    height: 200px;
+}
+
+.categoria-videos img:hover {
+    opacity: 1.0;
+    border: 3px solid green;
+}
+
+.categoria h2 {
+    color: #3D1F77;
 }
