--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ header {
     border-bottom: solid 2px rgb(#6C2C91);
     padding: 20px;
     font-size: 32px;
-    color: #005F80;
+    color:#3D1F77 ;
 }
 
 .chamada {
