--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ header {
 }
 
 .chamada {
-    background: #6600FF;
+    background: #6C2C91;
     padding-bottom: 80px;
     padding-top: 80px;
     display: flex;
